# Finance-Tracker

./: .env  .gitignore  .pre-commit-config.yaml  INSTALL.md  Makefile  README.md  diff.txt  install.bat  install.sh  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_installation.py
config/: config.json  default_config.py
docs/: QUICK_START.md  README.md  TROUBLESHOOTING.md  USER_MANUAL.md  conf.py  index.rst
docs/api/: core.rst  gui.rst  utils.rst
docs/dev/: architecture.md  contributing.md  setup.md
docs/user/: quick-start.md  troubleshooting.md
src/: main.py
src/cli/: finance_cli.py
src/core/: finance_manager.py
src/gui/: __init__.py  main_window.py  style.py
src/gui/dialogs/: __init__.py  settings_dialog.py
src/gui/widgets/: __init__.py  accounts.py  categories.py  dashboard.py  reports.py  summary_card.py  transactions.py
src/models/: base.py  models.py
src/utils/: config_manager.py  data_manager.py  db_utils.py  dummy_data.py  error_handler.py  formatting.py  initializer.py  logger.py  visualization.py
tests/: test_finance_manager.py
